...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/wallet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.AccountFragment">

            <EditText
                android:id="@+id/user_profile_first_name"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:inputType="textPersonName"
                android:textColor="@color/black"
...
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/last_name"
                android:textColor="#212121"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_profile_last_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.337" />

            <Button
                android:id="@+id/user_profile_log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:width="275dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/roboto_family"
                android:text="@string/log_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_change_password_button"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/user_profile_field_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/email"
                android:textColor="#212121"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_profile_email"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.438" />

            <TextView
...
                app:layout_constraintHorizontal_bias="0.807"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.534" />

            <Button
                android:id="@+id/user_profile_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:width="275dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/roboto_family"
...
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_radio_g"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/user_profile_change_photo_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="84dp"
                android:clickable="true"
                android:src="@drawable/ic_baseline_add_a_photo_24"
...
                app:layout_constraintHorizontal_bias="0.72"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529">

                <RadioButton
                    android:id="@+id/user_profile_gender_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/user_profile_gender_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/female" />
...
